log
Tue 19 Mar 2024 02:41:18 PM UTC: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
0dd38a6
Tue 19 Mar 2024 02:52:23 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3765196
Tue 19 Mar 2024 02:52:32 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1a71e4
Tue 19 Mar 2024 02:53:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:88:3: error: "/*" within comment [-Werror=comment]
   88 |   /*int suma = 0;
      |    
exercises.c:96:1: error: expected identifier or ‘(’ before ‘}’ token
   96 | }
      | ^
test.c: In function ‘test_suma_lista’:
test.c:100:17: error: implicit declaration of function ‘sumaLista’ [-Werror=implicit-function-declaration]
  100 |     int suma2 = sumaLista(L);
      |                 ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
02b6493
Tue 19 Mar 2024 02:55:51 PM UTC: 
 exercises.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
1f35449
Tue 19 Mar 2024 02:57:15 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
4b5bca7
Tue 19 Mar 2024 03:00:51 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
c5c3305
Tue 19 Mar 2024 03:05:08 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
64f00b3
Tue 19 Mar 2024 03:05:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
594f5a5
Tue 19 Mar 2024 03:07:02 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|1
total_score: 50/70
93226d0
Tue 19 Mar 2024 03:09:24 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
45139e8
Tue 19 Mar 2024 03:14:20 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
7d3e26c
Tue 19 Mar 2024 03:15:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
e1e6d20
Tue 19 Mar 2024 03:15:51 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
5ec59ff
Tue 19 Mar 2024 03:19:12 PM UTC: 
 exercises.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:199:6: error: implicit declaration of function ‘is_empty_stack’ [-Werror=implicit-function-declaration]
  199 |   if(is_empty_stack(P))
      |      ^~~~~~~~~~~~~~
exercises.c:177:7: error: unused variable ‘cont’ [-Werror=unused-variable]
  177 |   int cont = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
c788941
Tue 19 Mar 2024 03:30:06 PM UTC: 
 exercises.c | 44 --------------------------------------------
 1 file changed, 44 deletions(-)
 tests:  4|1
total_score: 50/70
d3d6a44
Tue 19 Mar 2024 04:16:55 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
bd91494
